Azure/auth-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-server
  labels:
    app: auth-server
    tier: auth-server
    role: master
spec:
  ports:
  - port: 3080
    targetPort: 3080
  selector:
    app: auth-server
    tier: auth-server
    role: master
---
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: auth-server
spec:
  selector:
    matchLabels:
      app: auth-server
      role: master
  replicas: 1
  template:
    metadata:
      labels:
        app: auth-server
        role: master
        tier: auth-server
    spec:
      containers:
      - name: master
        image: interlockacrdev.azurecr.io/auth-server
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 3000
