Azure/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
    tier: frontend
    role: master
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: frontend
    tier: frontend
    role: master
---
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
      role: master
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
        role: master
        tier: frontend
    spec:
      containers:
      - name: master
        image: sensolockacrdev.azurecr.io/sola-web-app-frontend:v4
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 3000
