Azure/auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /auth-service(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: auth-server
            port:
              number: 3080
